--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
 	},
-	"dependencies": {
-		"@fontsource/inter": "^5.0.20"
-	},
 	"devDependencies": {
-		"@iconify-json/lucide": "^1.1.208",
+		"@iconify-json/lucide": "^1.2.25",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/forms": "^0.5.7",
-		"@tailwindcss/typography": "^0.5.14",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.41",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^5.20.5",
 		"svelte-check": "^4.1.4",
-		"tailwindcss": "^3.4.10",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
-		"unplugin-icons": "^0.19.2",
+		"unplugin-icons": "^22.0.0",
 		"vite": "^6.2.0"
+	},
+	"dependencies": {
+		"@fontsource/inter": "^5.0.20",
+		"@fontsource/jetbrains-mono": "^5.1.2"
 	},
 	"type": "module"
 }
