--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check .",
-    "format": "prettier --write ."
+		"lint": "biome check",
+		"lint:fix": "biome check --fix --unsafe"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@iconify-json/lucide": "^1.2.25",
     "@sveltejs/adapter-auto": "^4.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.20",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
+    "@tailwindcss/vite": "^4.1.3",
     "svelte": "^5.20.5",
     "svelte-check": "^4.1.4",
-    "tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.3",
     "typescript": "^5.0.0",
     "unplugin-icons": "^22.0.0",
     "vite": "^6.2.0"
